--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -3,6 +3,12 @@
         <title>Second Hand Book List 2017</title> 
     </head>
     <body>
-
+        <table>
+            <tr>
+                <td>名稱</td>
+                <td>圖片</td>
+                <td>狀態</td>
+            </tr>
+        </table>
     </body>
 </html>
