--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -4,6 +4,11 @@
     </head>
     <body>
         <table>
+            <tr >
+                <td border="1" width="20%">名稱</td>
+                <td border="1" width="50%">圖片</td>
+                <tdborder="1" width="30%">狀態</td>
+            </tr>
             <tr>
                 <td>名稱</td>
                 <td>圖片</td>
