--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -1,19 +1,108 @@
 <html>
     <head>
         <title>Second Hand Book List 2017</title> 
+        <style>
+            img {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <table>
-            <tr >
-                <td border="1" width="20%">名稱</td>
-                <td border="1" width="50%">圖片</td>
-                <tdborder="1" width="30%">狀態</td>
+        <table width="100%" border="1">
+            <tr>
+                <td width = "25%" align="center" >圖片</td>
+                <td width = "75%" align="center" >備註</td>
             </tr>
             <tr>
-                <td>名稱</td>
-                <td>圖片</td>
-                <td>狀態</td>
+                <td ><a href="pic/0.JPG"><img src="pic/0.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：0<br/>
+                    適用課程：線性代數<br/>
+                    數量　　：2
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/1.JPG"><img src="pic/1.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：1<br/>
+                    適用課程：機率與統計
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/2.JPG"><img src="pic/2.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：2<br/>
+                    適用課程：線性代數
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/3.JPG"><img src="pic/3.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：3<br/>
+                    適用課程：線性代數(7thed)<br/>
+                    備註　　：7th edition，內有筆記
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/4.JPG"><img src="pic/4.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：4<br/>
+                    適用課程：編譯器
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/5.JPG"><img src="pic/5.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：5<br/>
+                    適用課程：通訊概論
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/6.JPG"><img src="pic/6.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：6<br/>
+                    適用課程：數位??
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/7.JPG"><img src="pic/7.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：7<br/>
+                    適用課程：邏輯設計<br/>
+                    數量　　：2
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/8.JPG"><img src="pic/8.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：8<br/>
+                    適用課程：普物<br/>
+                    備註　　：年紀有點大<br/>
+                    　　　　：內有些許鉛筆筆跡<br/>
+                    　　　　：e04
+                </td>
+            </tr>
+            <tr>
+                <td ><a href="pic/9.JPG"><img src="pic/9.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：9<br/>
+                    適用課程：演算法<br/>
+                    備註　　：祝修小王演算法的同學們<br/>
+                    　　　　：一帆風順呵<br/>
+                </td>
+            </tr>
+                <td ><a href="pic/10.JPG"><img src="pic/10.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：10<br/>
+                    適用課程：資導/資應?
+                </td>
+            </tr>
+                <td ><a href="pic/11.JPG"><img src="pic/11.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：11<br/>
+                    適用課程：工程數學
+                </td>
             </tr>
         </table>
     </body>
-</html>
+</html> 
