--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -17,7 +17,7 @@
                 <td ><a href="pic/0.JPG"><img src="pic/0.JPG" width="100%"></a></td>
                 <td>
                     編號　　：0<br/>
-                    適用課程：線性代數<br/>
+                    適用課程：離散數學<br/>
                     數量　　：2
                 </td>
             </tr>
@@ -101,6 +101,20 @@
                 <td>
                     編號　　：11<br/>
                     適用課程：工程數學
+                </td>
+            </tr>
+            </tr>
+                <td ><a href="pic/11.JPG"><img src="pic/11.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：12<br/>
+                    適用課程：工程數學
+                </td>
+            </tr>
+                </tr>
+                <td ><a href="pic/d.JPG"><img src="pic/d.JPG" width="100%"></a></td>
+                <td>
+                    編號　　：13<br/>
+                    適用課程：aki?
                 </td>
             </tr>
         </table>
