--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -14,7 +14,7 @@
                 <td width = "75%" align="center" >備註</td>
             </tr>
             <tr>
-                <td ><a href="pic/0.JPG"><img src="pic/0.JPG" width="100%"></a></td>
+                <td ><a href="pic/0.jpg"><img src="pic/0.jpg" width="100%"></a></td>
                 <td>
                     編號　　：0<br/>
                     適用課程：離散數學<br/>
@@ -22,21 +22,21 @@
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/1.JPG"><img src="pic/1.JPG" width="100%"></a></td>
+                <td ><a href="pic/1.jpg"><img src="pic/1.jpg" width="100%"></a></td>
                 <td>
                     編號　　：1<br/>
                     適用課程：機率與統計
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/2.JPG"><img src="pic/2.JPG" width="100%"></a></td>
+                <td ><a href="pic/2.jpg"><img src="pic/2.jpg" width="100%"></a></td>
                 <td>
                     編號　　：2<br/>
                     適用課程：線性代數
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/3.JPG"><img src="pic/3.JPG" width="100%"></a></td>
+                <td ><a href="pic/3.jpg"><img src="pic/3.jpg" width="100%"></a></td>
                 <td>
                     編號　　：3<br/>
                     適用課程：線性代數(7thed)<br/>
@@ -44,28 +44,28 @@
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/4.JPG"><img src="pic/4.JPG" width="100%"></a></td>
+                <td ><a href="pic/4.jpg"><img src="pic/4.jpg" width="100%"></a></td>
                 <td>
                     編號　　：4<br/>
                     適用課程：編譯器
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/5.JPG"><img src="pic/5.JPG" width="100%"></a></td>
+                <td ><a href="pic/5.jpg"><img src="pic/5.jpg" width="100%"></a></td>
                 <td>
                     編號　　：5<br/>
                     適用課程：通訊概論
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/6.JPG"><img src="pic/6.JPG" width="100%"></a></td>
+                <td ><a href="pic/6.jpg"><img src="pic/6.jpg" width="100%"></a></td>
                 <td>
                     編號　　：6<br/>
                     適用課程：數位??
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/7.JPG"><img src="pic/7.JPG" width="100%"></a></td>
+                <td ><a href="pic/7.jpg"><img src="pic/7.jpg" width="100%"></a></td>
                 <td>
                     編號　　：7<br/>
                     適用課程：邏輯設計<br/>
@@ -73,7 +73,7 @@
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/8.JPG"><img src="pic/8.JPG" width="100%"></a></td>
+                <td ><a href="pic/8.jpg"><img src="pic/8.jpg" width="100%"></a></td>
                 <td>
                     編號　　：8<br/>
                     適用課程：普物<br/>
@@ -83,7 +83,7 @@
                 </td>
             </tr>
             <tr>
-                <td ><a href="pic/9.JPG"><img src="pic/9.JPG" width="100%"></a></td>
+                <td ><a href="pic/9.jpg"><img src="pic/9.jpg" width="100%"></a></td>
                 <td>
                     編號　　：9<br/>
                     適用課程：演算法<br/>
@@ -91,29 +91,22 @@
                     　　　　：一帆風順呵<br/>
                 </td>
             </tr>
-                <td ><a href="pic/10.JPG"><img src="pic/10.JPG" width="100%"></a></td>
+                <td ><a href="pic/10.jpg"><img src="pic/10.jpg" width="100%"></a></td>
                 <td>
                     編號　　：10<br/>
                     適用課程：資導/資應?
                 </td>
             </tr>
-                <td ><a href="pic/11.JPG"><img src="pic/11.JPG" width="100%"></a></td>
+                <td ><a href="pic/11.jpg"><img src="pic/11.jpg" width="100%"></a></td>
                 <td>
                     編號　　：11<br/>
                     適用課程：工程數學
                 </td>
             </tr>
-            </tr>
-                <td ><a href="pic/11.JPG"><img src="pic/11.JPG" width="100%"></a></td>
+                </tr>
+                <td ><a href="pic/d.jpg"><img src="pic/d.jpg" width="100%"></a></td>
                 <td>
                     編號　　：12<br/>
-                    適用課程：工程數學
-                </td>
-            </tr>
-                </tr>
-                <td ><a href="pic/d.JPG"><img src="pic/d.JPG" width="100%"></a></td>
-                <td>
-                    編號　　：13<br/>
                     適用課程：aki?
                 </td>
             </tr>
