--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -104,7 +104,7 @@
                 </td>
             </tr>
                 </tr>
-                <td ><a href="pic/d.jpg"><img src="pic/d.jpg" width="100%"></a></td>
+                <td ><a href="pic/d.jpg"><img src="pic/d.JPG" width="100%"></a></td>
                 <td>
                     編號　　：12<br/>
                     適用課程：aki?
