--- a/public/secondhand/index.html
+++ b/public/secondhand/index.html
@@ -8,10 +8,10 @@
         </style>
     </head>
     <body>
-        <table width="100%" border="1">
+        <table width="75%" border="1">
             <tr>
                 <td width = "25%" align="center" >圖片</td>
-                <td width = "75%" align="center" >備註</td>
+                <td width = "50%" align="center" >備註</td>
             </tr>
             <tr>
                 <td ><a href="pic/0.jpg"><img src="pic/0.jpg" width="100%"></a></td>
@@ -47,14 +47,16 @@
                 <td ><a href="pic/4.jpg"><img src="pic/4.jpg" width="100%"></a></td>
                 <td>
                     編號　　：4<br/>
-                    適用課程：編譯器
+                    適用課程：編譯器<br/>
+                    備註　　：全新
                 </td>
             </tr>
             <tr>
                 <td ><a href="pic/5.jpg"><img src="pic/5.jpg" width="100%"></a></td>
                 <td>
                     編號　　：5<br/>
-                    適用課程：通訊概論
+                    適用課程：通訊概論<br/>
+                    備註　　：有李家同大師上課內容的筆記
                 </td>
             </tr>
             <tr>
@@ -107,7 +109,8 @@
                 <td ><a href="pic/d.jpg"><img src="pic/d.JPG" width="100%"></a></td>
                 <td>
                     編號　　：12<br/>
-                    適用課程：aki?
+                    適用課程：aki<br/>
+                    備註　　：中譯本
                 </td>
             </tr>
         </table>
